fixed about us link

--- a/source/2017-karaoke-ms-lau-bday.html
+++ b/source/2017-karaoke-ms-lau-bday.html
@@ -42,13 +42,13 @@
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about-us.html">About-Us</a></li>
+                        <li><a href="about.html">About-Us</a></li>
                         <li><a href="ByLawDraft.pdf">By-law</a></li>
                         <li><a href="committee.html">Committee</a></li>
-                        <li><a href="membership.html">Membership</a></li> 
+                        <li><a href="membership.html">Membership</a></li>
                         <li class="active"><a href="photos.html">Photos</a></li>
                         <li><a href="links.html">Links</a></li>
-                    </ul>        
+                    </ul>
                 </div><!--/.nav-collapse -->
             </div>
         </div>
@@ -71,14 +71,14 @@
             </div>
         </div>
     </section>
-    <!-- / .title -->  
+    <!-- / .title -->
 
-	<section id="portfolio" class="container main">    
+	<section id="portfolio" class="container main">
 		<h1 class="center">Karaoke and Birthday Dinner for Ms. Lau</h1>
 		<h5 class="center">April 2017</h5>
 		<h5 class="center">New York, NY</h5>
 		<hr>
-		
+
         <ul class="gallery col-4">
             <!--Item 1-->
             <li>
@@ -92,9 +92,9 @@
                     <div class="modal-body">
                         <img src="images/events/2017/karaoke-ms-lau-bday/img_0300.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 1--> 
+            <!--/Item 1-->
 
             <!--Item 2-->
             <li>
@@ -108,7 +108,7 @@
                     <div class="modal-body">
                         <img src="images/events/2017/karaoke-ms-lau-bday/img_0500.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
             <!--/Item 2-->
 
@@ -124,9 +124,9 @@
                     <div class="modal-body">
                         <img src="images/events/2017/karaoke-ms-lau-bday/img_0514s.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 3--> 
+            <!--/Item 3-->
 
             <!--Item 4-->
             <li>
@@ -140,9 +140,9 @@
                     <div class="modal-body">
                         <img src="images/events/2017/karaoke-ms-lau-bday/img_0516s.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 4--> 
+            <!--/Item 4-->
             <li>
                 <a data-toggle="modal" href="#modal-5">
                     <div class = "photo">
@@ -154,7 +154,7 @@
                     <div class="modal-body">
                         <img src="images/events/2017/karaoke-ms-lau-bday/img_0542s.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
             <li>
                 <a data-toggle="modal" href="#modal-6">
@@ -167,7 +167,7 @@
                     <div class="modal-body">
                         <img src="images/events/2017/karaoke-ms-lau-bday/img_0544s.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
             <li>
                 <a data-toggle="modal" href="#modal-7">
@@ -180,7 +180,7 @@
                     <div class="modal-body">
                         <img src="images/events/2017/karaoke-ms-lau-bday/img_0547s.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
             <li>
                 <a data-toggle="modal" href="#modal-8">
@@ -193,7 +193,7 @@
                     <div class="modal-body">
                         <img src="images/events/2017/karaoke-ms-lau-bday/img_9401.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
             <li>
                 <a data-toggle="modal" href="#modal-9">
@@ -206,7 +206,7 @@
                     <div class="modal-body">
                         <img src="images/events/2017/karaoke-ms-lau-bday/img_9402.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
             <li>
                 <a data-toggle="modal" href="#modal-10">
@@ -219,7 +219,7 @@
                     <div class="modal-body">
                         <img src="images/events/2017/karaoke-ms-lau-bday/p4221010.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
             <li>
                 <a data-toggle="modal" href="#modal-11">
@@ -232,7 +232,7 @@
                     <div class="modal-body">
                         <img src="images/events/2017/karaoke-ms-lau-bday/p4221021.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
             <li>
                 <a data-toggle="modal" href="#modal-12">
@@ -245,7 +245,7 @@
                     <div class="modal-body">
                         <img src="images/events/2017/karaoke-ms-lau-bday/p4221033.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
             <li>
                 <a data-toggle="modal" href="#modal-13">
@@ -258,7 +258,7 @@
                     <div class="modal-body">
                         <img src="images/events/2017/karaoke-ms-lau-bday/p4221037.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
             <li>
                 <a data-toggle="modal" href="#modal-14">
@@ -271,10 +271,10 @@
                     <div class="modal-body">
                         <img src="images/events/2017/karaoke-ms-lau-bday/p4221044.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
-            </li>         
+                </div>
+            </li>
         </ul>
-        
+
     </section>
 
 </div>
@@ -294,7 +294,7 @@
 
             <div class="span6">
                 <ul class="social pull-right">
-                    <li><a href="#"><i class="icon-facebook"></i></a></li>               
+                    <li><a href="#"><i class="icon-facebook"></i></a></li>
                 </ul>
             </div>
 
@@ -338,7 +338,7 @@
 <!-- /Required javascript files for Slider -->
 
 <!-- SL Slider -->
-<script type="text/javascript"> 
+<script type="text/javascript">
 $(function() {
     var Page = (function() {
 
