--- a/source/e_20ani.html
+++ b/source/e_20ani.html
@@ -42,13 +42,13 @@
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about-us.html">About-Us</a></li>
+                        <li><a href="about.html">About-Us</a></li>
                         <li><a href="ByLawDraft.pdf">By-law</a></li>
                         <li><a href="committee.html">Committee</a></li>
-                        <li><a href="membership.html">Membership</a></li> 
+                        <li><a href="membership.html">Membership</a></li>
                         <li class="active"><a href="photos.html">Photos</a></li>
                         <li><a href="links.html">Links</a></li>
-                    </ul>        
+                    </ul>
                 </div><!--/.nav-collapse -->
             </div>
         </div>
@@ -71,15 +71,15 @@
             </div>
         </div>
     </section>
-    <!-- / .title -->  
+    <!-- / .title -->
 
-	<section id="portfolio" class="container main">    
+	<section id="portfolio" class="container main">
 		<h1 class="center">20th Anniversary Dinner</h1>
 		<h5 class="center"> November 3, 2012, 7PM</h5>
 		<h5 class="center"> Chatham Square, Chinatown, New York</h5>
 		<h5 class="center"> We celebrate SPCCAA New York Chapter's 20th anniversity with Mr. Chien Lee, SPCC Supervisor, and Mr. Warren Lee, Music Director of SPCC, as guests of honor.</h5>
 		<hr>
-		
+
         <ul class="gallery col-4">
             <!--Item 1-->
             <li>
@@ -93,9 +93,9 @@
                     <div class="modal-body">
                         <img src="images/events/20ani/1.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 1--> 
+            <!--/Item 1-->
 
             <!--Item 2-->
             <li>
@@ -109,7 +109,7 @@
                     <div class="modal-body">
                         <img src="images/events/20ani/2.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
             <!--/Item 2-->
 
@@ -125,9 +125,9 @@
                     <div class="modal-body">
                         <img src="images/events/20ani/3.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 3--> 
+            <!--/Item 3-->
 
             <!--Item 4-->
             <li>
@@ -141,12 +141,12 @@
                     <div class="modal-body">
                         <img src="images/events/20ani/4.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 4--> 
+            <!--/Item 4-->
 
         </ul>
-        
+
     </section>
 
 </div>
@@ -166,7 +166,7 @@
 
             <div class="span6">
                 <ul class="social pull-right">
-                    <li><a href="#"><i class="icon-facebook"></i></a></li>               
+                    <li><a href="#"><i class="icon-facebook"></i></a></li>
                 </ul>
             </div>
 
@@ -210,7 +210,7 @@
 <!-- /Required javascript files for Slider -->
 
 <!-- SL Slider -->
-<script type="text/javascript"> 
+<script type="text/javascript">
 $(function() {
     var Page = (function() {
 
