--- a/source/o_faq.html
+++ b/source/o_faq.html
@@ -41,7 +41,7 @@
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about-us.html">About Us</a></li>
+                        <li><a href="about.html">About Us</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li class="dropdown active">
@@ -59,12 +59,12 @@
                                 <li><a href="terms.html">Terms of Use</a></li>
                             </ul>
                         </li>
-                        <li><a href="blog.html">Blog</a></li> 
+                        <li><a href="blog.html">Blog</a></li>
                         <li><a href="contact-us.html">Contact</a></li>
                         <li class="login">
                             <a data-toggle="modal" href="#loginForm"><i class="icon-lock"></i></a>
                         </li>
-                    </ul>        
+                    </ul>
                 </div><!--/.nav-collapse -->
             </div>
         </div>
@@ -87,7 +87,7 @@
             </div>
         </div>
     </section>
-    <!-- / .title -->       
+    <!-- / .title -->
 
     <section id="faqs" class="container">
         <ul class="faq">
@@ -140,7 +140,7 @@
         </li>
     </ul>
     <p>&nbsp;</p>
-    
+
 </section>
 
 <!--Bottom-->
@@ -188,7 +188,7 @@
                         <li><a href="#">Clients</a></li>
                         <li><a href="#">Blog</a></li>
                     </ul>
-                </div>  
+                </div>
             </div>
             <!--Important Links-->
 
@@ -269,13 +269,13 @@
                     <li><a href="#"><i class="icon-twitter"></i></a></li>
                     <li><a href="#"><i class="icon-pinterest"></i></a></li>
                     <li><a href="#"><i class="icon-linkedin"></i></a></li>
-                    <li><a href="#"><i class="icon-google-plus"></i></a></li>                       
+                    <li><a href="#"><i class="icon-google-plus"></i></a></li>
                     <li><a href="#"><i class="icon-youtube"></i></a></li>
-                    <li><a href="#"><i class="icon-tumblr"></i></a></li>                        
+                    <li><a href="#"><i class="icon-tumblr"></i></a></li>
                     <li><a href="#"><i class="icon-dribbble"></i></a></li>
                     <li><a href="#"><i class="icon-rss"></i></a></li>
                     <li><a href="#"><i class="icon-github-alt"></i></a></li>
-                    <li><a href="#"><i class="icon-instagram"></i></a></li>                   
+                    <li><a href="#"><i class="icon-instagram"></i></a></li>
                 </ul>
             </div>
 
