--- a/source/o_portfolio.html
+++ b/source/o_portfolio.html
@@ -41,7 +41,7 @@
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about-us.html">About Us</a></li>
+                        <li><a href="about.html">About Us</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li class="active"><a href="portfolio.html">Portfolio</a></li>
                         <li class="dropdown">
@@ -59,12 +59,12 @@
                                 <li><a href="terms.html">Terms of Use</a></li>
                             </ul>
                         </li>
-                        <li><a href="blog.html">Blog</a></li> 
+                        <li><a href="blog.html">Blog</a></li>
                         <li><a href="contact-us.html">Contact</a></li>
                         <li class="login">
                             <a data-toggle="modal" href="#loginForm"><i class="icon-lock"></i></a>
                         </li>
-                    </ul>        
+                    </ul>
                 </div><!--/.nav-collapse -->
             </div>
         </div>
@@ -87,9 +87,9 @@
             </div>
         </div>
     </section>
-    <!-- / .title -->     
+    <!-- / .title -->
 
-    <section id="portfolio" class="container main">    
+    <section id="portfolio" class="container main">
         <ul class="gallery col-4">
             <!--Item 1-->
             <li>
@@ -98,7 +98,7 @@
                     <div class="overlay">
                     </div>
                     <div class="links">
-                        <a data-toggle="modal" href="#modal-1"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>                                
+                        <a data-toggle="modal" href="#modal-1"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>
                     </div>
                 </div>
                 <div class="desc">
@@ -110,9 +110,9 @@
                     <div class="modal-body">
                         <img src="images/portfolio/full/item1.jpg" alt=" " width="100%" style="max-height:400px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 1--> 
+            <!--/Item 1-->
 
             <!--Item 2-->
             <li>
@@ -121,7 +121,7 @@
                     <div class="overlay">
                     </div>
                     <div class="links">
-                        <a data-toggle="modal" href="#modal-1"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>                                
+                        <a data-toggle="modal" href="#modal-1"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>
                     </div>
                 </div>
                 <div class="desc">
@@ -133,7 +133,7 @@
                     <div class="modal-body">
                         <img src="images/portfolio/full/item2.jpg" alt=" " width="100%" style="max-height:400px">
                     </div>
-                </div>                 
+                </div>
             </li>
             <!--/Item 2-->
 
@@ -144,7 +144,7 @@
                     <div class="overlay">
                     </div>
                     <div class="links">
-                        <a data-toggle="modal" href="#modal-3"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>                                
+                        <a data-toggle="modal" href="#modal-3"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>
                     </div>
                 </div>
                 <div class="desc">
@@ -156,9 +156,9 @@
                     <div class="modal-body">
                         <img src="images/portfolio/full/item3.jpg" alt=" " width="100%" style="max-height:400px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 3--> 
+            <!--/Item 3-->
 
             <!--Item 4-->
             <li>
@@ -167,7 +167,7 @@
                     <div class="overlay">
                     </div>
                     <div class="links">
-                        <a data-toggle="modal" href="#modal-4"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>                                
+                        <a data-toggle="modal" href="#modal-4"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>
                     </div>
                 </div>
                 <div class="desc">
@@ -179,9 +179,9 @@
                     <div class="modal-body">
                         <img src="images/portfolio/full/item4.jpg" alt=" " width="100%" style="max-height:400px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 4--> 
+            <!--/Item 4-->
 
             <!--Item 5-->
             <li>
@@ -190,7 +190,7 @@
                     <div class="overlay">
                     </div>
                     <div class="links">
-                        <a data-toggle="modal" href="#modal-5"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>                                
+                        <a data-toggle="modal" href="#modal-5"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>
                     </div>
                 </div>
                 <div class="desc">
@@ -202,9 +202,9 @@
                     <div class="modal-body">
                         <img src="images/portfolio/full/item5.jpg" alt=" " width="100%" style="max-height:400px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 5--> 
+            <!--/Item 5-->
 
             <!--Item 6-->
             <li>
@@ -213,7 +213,7 @@
                     <div class="overlay">
                     </div>
                     <div class="links">
-                        <a data-toggle="modal" href="#modal-6"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>                                
+                        <a data-toggle="modal" href="#modal-6"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>
                     </div>
                 </div>
                 <div class="desc">
@@ -225,9 +225,9 @@
                     <div class="modal-body">
                         <img src="images/portfolio/full/item6.jpg" alt=" " width="100%" style="max-height:400px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 6-->                 
+            <!--/Item 6-->
 
             <!--Item 7-->
             <li>
@@ -236,7 +236,7 @@
                     <div class="overlay">
                     </div>
                     <div class="links">
-                        <a data-toggle="modal" href="#modal-7"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>                                
+                        <a data-toggle="modal" href="#modal-7"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>
                     </div>
                 </div>
                 <div class="desc">
@@ -248,7 +248,7 @@
                     <div class="modal-body">
                         <img src="images/portfolio/full/item1.jpg" alt=" " width="100%" style="max-height:400px">
                     </div>
-                </div>                 
+                </div>
             </li>
             <!--/Item 7-->
 
@@ -259,7 +259,7 @@
                     <div class="overlay">
                     </div>
                     <div class="links">
-                        <a data-toggle="modal" href="#modal-8"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>                                
+                        <a data-toggle="modal" href="#modal-8"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>
                     </div>
                 </div>
                 <div class="desc">
@@ -271,10 +271,10 @@
                     <div class="modal-body">
                         <img src="images/portfolio/full/item5.jpg" alt=" " width="100%" style="max-height:400px">
                     </div>
-                </div>                 
+                </div>
             </li>
             <!--/Item 8-->
-            
+
             <!--Item 9-->
             <li>
                 <div class="preview">
@@ -282,7 +282,7 @@
                     <div class="overlay">
                     </div>
                     <div class="links">
-                        <a data-toggle="modal" href="#modal-9"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>                                
+                        <a data-toggle="modal" href="#modal-9"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>
                     </div>
                 </div>
                 <div class="desc">
@@ -294,9 +294,9 @@
                     <div class="modal-body">
                         <img src="images/portfolio/full/item1.jpg" alt=" " width="100%" style="max-height:400px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 9--> 
+            <!--/Item 9-->
 
             <!--Item 10-->
             <li>
@@ -305,7 +305,7 @@
                     <div class="overlay">
                     </div>
                     <div class="links">
-                        <a data-toggle="modal" href="#modal-10"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>                                
+                        <a data-toggle="modal" href="#modal-10"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>
                     </div>
                 </div>
                 <div class="desc">
@@ -317,7 +317,7 @@
                     <div class="modal-body">
                         <img src="images/portfolio/full/item2.jpg" alt=" " width="100%" style="max-height:400px">
                     </div>
-                </div>                 
+                </div>
             </li>
             <!--/Item 10-->
 
@@ -328,7 +328,7 @@
                     <div class="overlay">
                     </div>
                     <div class="links">
-                        <a data-toggle="modal" href="#modal-11"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>                                
+                        <a data-toggle="modal" href="#modal-11"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>
                     </div>
                 </div>
                 <div class="desc">
@@ -340,9 +340,9 @@
                     <div class="modal-body">
                         <img src="images/portfolio/full/item3.jpg" alt=" " width="100%" style="max-height:400px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 11--> 
+            <!--/Item 11-->
 
             <!--Item 12-->
             <li>
@@ -351,7 +351,7 @@
                     <div class="overlay">
                     </div>
                     <div class="links">
-                        <a data-toggle="modal" href="#modal-12"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>                                
+                        <a data-toggle="modal" href="#modal-12"><i class="icon-eye-open"></i></a><a href="#"><i class="icon-link"></i></a>
                     </div>
                 </div>
                 <div class="desc">
@@ -363,12 +363,12 @@
                     <div class="modal-body">
                         <img src="images/portfolio/full/item4.jpg" alt=" " width="100%" style="max-height:400px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 12-->                
+            <!--/Item 12-->
 
         </ul>
-        
+
     </section>
 
     <!--Bottom-->
@@ -416,7 +416,7 @@
                             <li><a href="#">Clients</a></li>
                             <li><a href="#">Blog</a></li>
                         </ul>
-                    </div>  
+                    </div>
                 </div>
                 <!--Important Links-->
 
@@ -497,13 +497,13 @@
                     <li><a href="#"><i class="icon-twitter"></i></a></li>
                     <li><a href="#"><i class="icon-pinterest"></i></a></li>
                     <li><a href="#"><i class="icon-linkedin"></i></a></li>
-                    <li><a href="#"><i class="icon-google-plus"></i></a></li>                       
+                    <li><a href="#"><i class="icon-google-plus"></i></a></li>
                     <li><a href="#"><i class="icon-youtube"></i></a></li>
-                    <li><a href="#"><i class="icon-tumblr"></i></a></li>                        
+                    <li><a href="#"><i class="icon-tumblr"></i></a></li>
                     <li><a href="#"><i class="icon-dribbble"></i></a></li>
                     <li><a href="#"><i class="icon-rss"></i></a></li>
                     <li><a href="#"><i class="icon-github-alt"></i></a></li>
-                    <li><a href="#"><i class="icon-instagram"></i></a></li>                   
+                    <li><a href="#"><i class="icon-instagram"></i></a></li>
                 </ul>
             </div>
 
