--- a/source/about.html
+++ b/source/about.html
@@ -42,13 +42,13 @@
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
                         <li><a href="index.html">Home</a></li>
-                        <li class="active"><a href="about-us.html">About-Us</a></li>
+                        <li class="active"><a href="about.html">About-Us</a></li>
                         <li><a href="ByLawDraft.pdf">By-law</a></li>
                         <li><a href="committee.html">Committee</a></li>
-                        <li><a href="membership.html">Membership</a></li> 
+                        <li><a href="membership.html">Membership</a></li>
                         <li><a href="photos.html">Photos</a></li>
                         <li><a href="links.html">Links</a></li>
-                    </ul>        
+                    </ul>
                 </div><!--/.nav-collapse -->
             </div>
         </div>
@@ -70,7 +70,7 @@
             </div>
         </div>
     </section>
-    <!-- / .title -->  
+    <!-- / .title -->
 
 <section id="about-us" class="container main">
 	<!-- Meet the team -->
@@ -102,7 +102,7 @@
 
             <div class="span6">
                 <ul class="social pull-right">
-                    <li><a href="#"><i class="icon-facebook"></i></a></li>               
+                    <li><a href="#"><i class="icon-facebook"></i></a></li>
                 </ul>
             </div>
 
@@ -146,7 +146,7 @@
 <!-- /Required javascript files for Slider -->
 
 <!-- SL Slider -->
-<script type="text/javascript"> 
+<script type="text/javascript">
 $(function() {
     var Page = (function() {
 
