--- a/source/e_2017-sands-point.html
+++ b/source/e_2017-sands-point.html
@@ -42,13 +42,13 @@
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about-us.html">About-Us</a></li>
+                        <li><a href="about.html">About-Us</a></li>
                         <li><a href="ByLawDraft.pdf">By-law</a></li>
                         <li><a href="committee.html">Committee</a></li>
-                        <li><a href="membership.html">Membership</a></li> 
+                        <li><a href="membership.html">Membership</a></li>
                         <li class="active"><a href="photos.html">Photos</a></li>
                         <li><a href="links.html">Links</a></li>
-                    </ul>        
+                    </ul>
                 </div><!--/.nav-collapse -->
             </div>
         </div>
@@ -71,14 +71,14 @@
             </div>
         </div>
     </section>
-    <!-- / .title -->  
+    <!-- / .title -->
 
-	<section id="portfolio" class="container main">    
+	<section id="portfolio" class="container main">
 		<h1 class="center">Sands Point Preserve</h1>
 		<h5 class="center">October 2017</h5>
 		<h5 class="center">Sands Point, NY</h5>
 		<hr>
-		
+
         <ul class="gallery col-4">
             <!--Item 1-->
             <li>
@@ -92,9 +92,9 @@
                     <div class="modal-body">
                         <img src="images/events/2017/sands-point-preserve/img_4454.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 1--> 
+            <!--/Item 1-->
 
             <!--Item 2-->
             <li>
@@ -108,7 +108,7 @@
                     <div class="modal-body">
                         <img src="images/events/2017/sands-point-preserve/img_4475.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
             <!--/Item 2-->
 
@@ -124,9 +124,9 @@
                     <div class="modal-body">
                         <img src="images/events/2017/sands-point-preserve/pa071491.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 3--> 
+            <!--/Item 3-->
 
             <!--Item 4-->
             <li>
@@ -140,9 +140,9 @@
                     <div class="modal-body">
                         <img src="images/events/2017/sands-point-preserve/pa071500.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 4--> 
+            <!--/Item 4-->
 
             <li>
                 <a data-toggle="modal" href="#modal-5">
@@ -155,7 +155,7 @@
                     <div class="modal-body">
                         <img src="images/events/2017/sands-point-preserve/img_2125.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
 
             <li>
@@ -169,7 +169,7 @@
                     <div class="modal-body">
                         <img src="images/events/2017/sands-point-preserve/img_2133.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
 
             <li>
@@ -183,10 +183,10 @@
                     <div class="modal-body">
                         <img src="images/events/2017/sands-point-preserve/img_2137.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
         </ul>
-        
+
     </section>
 
 </div>
@@ -206,7 +206,7 @@
 
             <div class="span6">
                 <ul class="social pull-right">
-                    <li><a href="#"><i class="icon-facebook"></i></a></li>               
+                    <li><a href="#"><i class="icon-facebook"></i></a></li>
                 </ul>
             </div>
 
@@ -250,7 +250,7 @@
 <!-- /Required javascript files for Slider -->
 
 <!-- SL Slider -->
-<script type="text/javascript"> 
+<script type="text/javascript">
 $(function() {
     var Page = (function() {
 
