--- a/source/e_cherry.html
+++ b/source/e_cherry.html
@@ -42,13 +42,13 @@
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about-us.html">About-Us</a></li>
+                        <li><a href="about.html">About-Us</a></li>
                         <li><a href="ByLawDraft.pdf">By-law</a></li>
                         <li><a href="committee.html">Committee</a></li>
-                        <li><a href="membership.html">Membership</a></li> 
+                        <li><a href="membership.html">Membership</a></li>
                         <li class="active"><a href="photos.html">Photos</a></li>
                         <li><a href="links.html">Links</a></li>
-                    </ul>        
+                    </ul>
                 </div><!--/.nav-collapse -->
             </div>
         </div>
@@ -71,15 +71,15 @@
             </div>
         </div>
     </section>
-    <!-- / .title -->  
+    <!-- / .title -->
 
-	<section id="portfolio" class="container main">    
+	<section id="portfolio" class="container main">
 		<h1 class="center">Cherry Blossoms in New York</h1>
 		<h5 class="center"> April 18, 2015, 10am</h5>
 		<h5 class="center"> 990 Washington Avenue, Brooklyn, NY</h5>
 		<h5 class="center"> We visited the beautiful Cherry Blossoms to celebrate Spring and enjoyed lunch at Saul Restaurant in Brooklyn Museum. In the afternoon, we recorded a group singing of our school hymn in preparation for SPCC's 100 anniversary.</h5>
 		<hr>
-		
+
         <ul class="gallery col-4">
             <!--Item 1-->
             <li>
@@ -93,9 +93,9 @@
                     <div class="modal-body">
                         <img src="images/events/cherry/1.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 1--> 
+            <!--/Item 1-->
 
             <!--Item 2-->
             <li>
@@ -109,7 +109,7 @@
                     <div class="modal-body">
                         <img src="images/events/cherry/2.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
             <!--/Item 2-->
 
@@ -125,9 +125,9 @@
                     <div class="modal-body">
                         <img src="images/events/cherry/3.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 3--> 
+            <!--/Item 3-->
 
             <!--Item 4-->
             <li>
@@ -141,9 +141,9 @@
                     <div class="modal-body">
                         <img src="images/events/cherry/4.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 4--> 
+            <!--/Item 4-->
 
             <!--Item 5-->
             <li>
@@ -157,9 +157,9 @@
                     <div class="modal-body">
                         <img src="images/events/cherry/5.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 5--> 
+            <!--/Item 5-->
 
             <!--Item 6-->
             <li>
@@ -173,9 +173,9 @@
                     <div class="modal-body">
                         <img src="images/events/cherry/6.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 6-->                 
+            <!--/Item 6-->
 
             <!--Item 7-->
             <li>
@@ -189,7 +189,7 @@
                     <div class="modal-body">
                         <img src="images/events/cherry/7.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
             <!--/Item 7-->
 
@@ -205,12 +205,12 @@
                     <div class="modal-body">
                         <img src="images/events/cherry/8.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
             <!--/Item 8-->
 
         </ul>
-        
+
     </section>
 
 </div>
@@ -230,7 +230,7 @@
 
             <div class="span6">
                 <ul class="social pull-right">
-                    <li><a href="#"><i class="icon-facebook"></i></a></li>               
+                    <li><a href="#"><i class="icon-facebook"></i></a></li>
                 </ul>
             </div>
 
@@ -274,7 +274,7 @@
 <!-- /Required javascript files for Slider -->
 
 <!-- SL Slider -->
-<script type="text/javascript"> 
+<script type="text/javascript">
 $(function() {
     var Page = (function() {
 
