--- a/source/e_cny2014.html
+++ b/source/e_cny2014.html
@@ -42,13 +42,13 @@
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about-us.html">About-Us</a></li>
+                        <li><a href="about.html">About-Us</a></li>
                         <li><a href="ByLawDraft.pdf">By-law</a></li>
                         <li><a href="committee.html">Committee</a></li>
-                        <li><a href="membership.html">Membership</a></li> 
+                        <li><a href="membership.html">Membership</a></li>
                         <li class="active"><a href="photos.html">Photos</a></li>
                         <li><a href="links.html">Links</a></li>
-                    </ul>        
+                    </ul>
                 </div><!--/.nav-collapse -->
             </div>
         </div>
@@ -71,15 +71,15 @@
             </div>
         </div>
     </section>
-    <!-- / .title -->  
+    <!-- / .title -->
 
-	<section id="portfolio" class="container main">    
+	<section id="portfolio" class="container main">
 		<h1 class="center">Annual Chinese New Year Banquet 2014</h1>
 		<h5 class="center"> February 8, 2014, 7pm</h5>
 		<h5 class="center"> Chatham Square, Chiantown, New York</h5>
 		<h5 class="center"> We held our Chinese New Year Banquet & Annual General Meeting at Chatham Square to celebrate the Year of the Horse and elect committee members.</h5>
 		<hr>
-		
+
         <ul class="gallery col-4">
             <!--Item 1-->
             <li>
@@ -93,9 +93,9 @@
                     <div class="modal-body">
                         <img src="images/events/cny2014/1.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 1--> 
+            <!--/Item 1-->
 
             <!--Item 2-->
             <li>
@@ -109,7 +109,7 @@
                     <div class="modal-body">
                         <img src="images/events/cny2014/2.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
             <!--/Item 2-->
 
@@ -125,9 +125,9 @@
                     <div class="modal-body">
                         <img src="images/events/cny2014/3.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 3--> 
+            <!--/Item 3-->
 
             <!--Item 4-->
             <li>
@@ -141,9 +141,9 @@
                     <div class="modal-body">
                         <img src="images/events/cny2014/4.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 4--> 
+            <!--/Item 4-->
 
             <!--Item 5-->
             <li>
@@ -157,9 +157,9 @@
                     <div class="modal-body">
                         <img src="images/events/cny2014/5.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 5--> 
+            <!--/Item 5-->
 
             <!--Item 6-->
             <li>
@@ -173,9 +173,9 @@
                     <div class="modal-body">
                         <img src="images/events/cny2014/6.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 6-->                 
+            <!--/Item 6-->
 
             <!--Item 7-->
             <li>
@@ -189,7 +189,7 @@
                     <div class="modal-body">
                         <img src="images/events/cny2014/7.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
             <!--/Item 7-->
 
@@ -205,10 +205,10 @@
                     <div class="modal-body">
                         <img src="images/events/cny2014/8.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
             <!--/Item 8-->
-            
+
             <!--Item 9-->
             <li>
 				<a data-toggle="modal" href="#modal-9">
@@ -221,13 +221,13 @@
                     <div class="modal-body">
                         <img src="images/events/cny2014/9.jpg" alt=" " width="100%" style="max-height:600px">
                     </div>
-                </div>                 
+                </div>
             </li>
-            <!--/Item 9--> 
+            <!--/Item 9-->
 
 
         </ul>
-        
+
     </section>
 
 </div>
@@ -247,7 +247,7 @@
 
             <div class="span6">
                 <ul class="social pull-right">
-                    <li><a href="#"><i class="icon-facebook"></i></a></li>               
+                    <li><a href="#"><i class="icon-facebook"></i></a></li>
                 </ul>
             </div>
 
@@ -291,7 +291,7 @@
 <!-- /Required javascript files for Slider -->
 
 <!-- SL Slider -->
-<script type="text/javascript"> 
+<script type="text/javascript">
 $(function() {
     var Page = (function() {
 
