--- a/source/o_blog.html
+++ b/source/o_blog.html
@@ -41,7 +41,7 @@
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about-us.html">About Us</a></li>
+                        <li><a href="about.html">About Us</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li class="dropdown">
@@ -59,12 +59,12 @@
                                 <li><a href="terms.html">Terms of Use</a></li>
                             </ul>
                         </li>
-                        <li class="active"><a href="blog.html">Blog</a></li> 
+                        <li class="active"><a href="blog.html">Blog</a></li>
                         <li><a href="contact-us.html">Contact</a></li>
                         <li class="login">
                             <a data-toggle="modal" href="#loginForm"><i class="icon-lock"></i></a>
                         </li>
-                    </ul>        
+                    </ul>
                 </div><!--/.nav-collapse -->
             </div>
         </div>
@@ -87,7 +87,7 @@
             </div>
         </div>
     </section>
-    <!-- / .title -->         
+    <!-- / .title -->
 
     <section id="about-us" class="container main">
         <div class="row-fluid">
@@ -210,9 +210,9 @@
                     </div>
                 </div>
 
-            </div>                        
+            </div>
         </div>
-        <!-- End Popular Posts -->        
+        <!-- End Popular Posts -->
 
         <div class="widget">
             <h3>Blog Categories</h3>
@@ -239,7 +239,7 @@
                     </div>
                 </div>
 
-            </div>                       
+            </div>
         </div>
         <!-- End Category Widget -->
 
@@ -256,7 +256,7 @@
                 <li><a class="btn btn-mini btn-primary" href="#">Tutorial</a></li>
                 <li><a class="btn btn-mini btn-primary" href="#">Update</a></li>
             </ul>
-        </div> 
+        </div>
         <!-- End Tag Cloud Widget -->
 
         <div class="widget">
@@ -267,8 +267,8 @@
                 <li><a href="#">March 2013</a></li>
                 <li><a href="#">February 2013</a></li>
             </ul>
-        </div> 
-        <!-- End Archive Widget -->   
+        </div>
+        <!-- End Archive Widget -->
 
     </aside>
 </div>
@@ -320,7 +320,7 @@
                         <li><a href="#">Clients</a></li>
                         <li><a href="#">Blog</a></li>
                     </ul>
-                </div>  
+                </div>
             </div>
             <!--Important Links-->
 
@@ -401,13 +401,13 @@
                     <li><a href="#"><i class="icon-twitter"></i></a></li>
                     <li><a href="#"><i class="icon-pinterest"></i></a></li>
                     <li><a href="#"><i class="icon-linkedin"></i></a></li>
-                    <li><a href="#"><i class="icon-google-plus"></i></a></li>                       
+                    <li><a href="#"><i class="icon-google-plus"></i></a></li>
                     <li><a href="#"><i class="icon-youtube"></i></a></li>
-                    <li><a href="#"><i class="icon-tumblr"></i></a></li>                        
+                    <li><a href="#"><i class="icon-tumblr"></i></a></li>
                     <li><a href="#"><i class="icon-dribbble"></i></a></li>
                     <li><a href="#"><i class="icon-rss"></i></a></li>
                     <li><a href="#"><i class="icon-github-alt"></i></a></li>
-                    <li><a href="#"><i class="icon-instagram"></i></a></li>                   
+                    <li><a href="#"><i class="icon-instagram"></i></a></li>
                 </ul>
             </div>
 
