--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>SPCCAA-NY</title>
-    <meta name="description" content="">
+    <meta name="description" content="St Paul's Co-Educational College NY Alumni">
     <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
